--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <form id="loginForm">
     <input type="text" name="username" placeholder="Scratch Username" required />
     <input type="text" name="token" placeholder="ScratchAuth Token" required />
+    <p>To use ScratchAuth token you need to put a custom code on your profile's about me, the code you put on your profile is your token</p>
     <button type="button" onclick="login()">Login with ScratchAuth</button>
   </form>
 
