--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div id="imageLink"></div>
 
   <script>
-    const nodeServerUrl = 'http://your-node-server-url.com';
+    const nodeServerUrl = 'https://image-hoster.onrender.com/';
 
     async function login() {
       const form = document.getElementById('loginForm');
