--- a/upload.html
+++ b/upload.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Upload</title>
+  <link rel="stylesheet" href="login.html">
 </head>
 <body>
   <div class="container">
