--- a/upload.html
+++ b/upload.html
@@ -87,6 +87,7 @@
     const serverUrl = 'https://image-hoster.onrender.com';
     const username = localStorage.getItem('verifiedUser');
 
+    // Redirect to login page if user is not verified
     if (!username) {
       window.location.href = 'login.html';
     }
@@ -112,6 +113,5 @@
       }
     }
   </script>
-
 </body>
 </html>
