--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
     <p>Upload and share anything with out platform!</p>
     
     <div class="button-container">
-      <a href="login.html" class="btn">Login</a>
-      <a href="upload.html" class="btn">Go to Upload</a>
+      <a href="login" class="btn">Login</a>
+      <a href="upload" class="btn">Go to Upload</a>
+      <a href="Web" class="btn">Web Hosting</a>
     </div>
   </div>
  </center>
