--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
       const result = await response.json();
       if (result.verified) {
         localStorage.setItem('verifiedUser', username);
-        window.location.href = 'upload.html';
+        window.location.href = 'index.html';
       } else {
         document.getElementById('codeMessage').textContent = result.message;
       }
