--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     
     <div class="button-container">
       <a href="login" class="btn2">Login</a>
-      <a href="upload" class="btn">Go to Upload</a>
+      <a href="upload" class="btn">Image Hosting</a>
+          <a href="video" class="btn">Video Hosting</a>
       <a href="Web" class="btn">Web Hosting</a>
     </div>
   </div>
